--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ div.next_button {
     margin: 7px;
     border-radius: 8px;
     border: 2px;
-    font-size: 16px
+    font-size: 16px;
 }
 
 .score_text {
